force-app/main/default/objects/Application__c/fields/Request_Date_End__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_End__c</fullName>
    <label>Request Date End</label>
    <type>Date</type>
</CustomField>