force-app/main/default/objects/Application__c/fields/Request_Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_Start__c</fullName>
    <label>Request Date Start</label>
    <type>Date</type>
</CustomField>