force-app/main/default/objects/Application__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <formula>Project_Resource__r.Resource__r.FirstName+&apos; &apos;+Project_Resource__r.Resource__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource</label>
    <type>Text</type>
</CustomField>